--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,15 +2,23 @@
   "name": "personify",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "yarn tsc | node dist/server.js",
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/server.js\"",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Abhishek Vishwakarma",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^7.6.0",
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.17",
+    "typescript": "^4.9.4"
   }
 }
