--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,12 +13,13 @@
   "author": "Abhishek Vishwakarma",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^7.6.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
+    "concurrently": "^7.6.0",
     "typescript": "^4.9.4"
   }
 }
